Sources/antlr/LangParser.swift
// Generated from Sources/antlr-g4/Lang.g4 by ANTLR 4.13.1
import Antlr4

open class LangParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = LangParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(LangParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, 
                 T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12, 
                 T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, 
                 T__17 = 18, IntegerLiteral = 19, RealLiteral = 20, StringLiteral = 21, 
                 BooleanLiteral = 22, BinaryOperator = 23, Identifier = 24, 
                 Alpha = 25, Digit = 26, Whitespace = 27, Comment = 28
	}

	public
	static let RULE_program = 0, RULE_typeDef = 1, RULE_typeExpr = 2, RULE_typeHint = 3, 
            RULE_binding = 4, RULE_bindingList = 5, RULE_funcParam = 6, 
            RULE_funcParamList = 7, RULE_expr = 8, RULE_exprList = 9

	public
	static let ruleNames: [String] = [
		"program", "typeDef", "typeExpr", "typeHint", "binding", "bindingList", 
		"funcParam", "funcParamList", "expr", "exprList"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'type'", "'='", "'('", "')'", "','", "'|'", "'->'", "':'", "'.'", 
		"'let'", "'in'", "'{'", "'}'", "'func'", "'=>'", "'if'", "'then'", "'else'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 
		nil, nil, nil, nil, nil, "IntegerLiteral", "RealLiteral", "StringLiteral", 
		"BooleanLiteral", "BinaryOperator", "Identifier", "Alpha", "Digit", "Whitespace", 
		"Comment"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "Lang.g4" }

	override open
	func getRuleNames() -> [String] { return LangParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return LangParser._serializedATN }

	override open
	func getATN() -> ATN { return LangParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return LangParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,LangParser._ATN,LangParser._decisionToDFA, LangParser._sharedContextCache)
	}


	public class ProgramContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(LangParser.Tokens.EOF.rawValue, 0)
			}
			open
			func typeDef() -> [TypeDefContext] {
				return getRuleContexts(TypeDefContext.self)
			}
			open
			func typeDef(_ i: Int) -> TypeDefContext? {
				return getRuleContext(TypeDefContext.self, i)
			}
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_program
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterProgram(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitProgram(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitProgram(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitProgram(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext
		_localctx = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, LangParser.RULE_program)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(24)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 23675914) != 0)) {
		 		setState(22)
		 		try _errHandler.sync(self)
		 		switch (LangParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .T__0:
		 			setState(20)
		 			try typeDef()

		 			break
		 		case .T__2:fallthrough
		 		case .T__9:fallthrough
		 		case .T__13:fallthrough
		 		case .T__15:fallthrough
		 		case .IntegerLiteral:fallthrough
		 		case .StringLiteral:fallthrough
		 		case .BooleanLiteral:fallthrough
		 		case .Identifier:
		 			setState(21)
		 			try expr(0)

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}

		 		setState(26)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(27)
		 	try match(LangParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TypeDefContext: ParserRuleContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(LangParser.Tokens.Identifier.rawValue, 0)
			}
			open
			func typeExpr() -> TypeExprContext? {
				return getRuleContext(TypeExprContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_typeDef
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterTypeDef(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitTypeDef(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitTypeDef(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitTypeDef(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func typeDef() throws -> TypeDefContext {
		var _localctx: TypeDefContext
		_localctx = TypeDefContext(_ctx, getState())
		try enterRule(_localctx, 2, LangParser.RULE_typeDef)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(29)
		 	try match(LangParser.Tokens.T__0.rawValue)
		 	setState(30)
		 	try match(LangParser.Tokens.Identifier.rawValue)
		 	setState(31)
		 	try match(LangParser.Tokens.T__1.rawValue)
		 	setState(32)
		 	try typeExpr(0)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class TypeExprContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_typeExpr
		}
	}
	public class ParenTypeExprContext: TypeExprContext {
			open
			func typeExpr() -> TypeExprContext? {
				return getRuleContext(TypeExprContext.self, 0)
			}

		public
		init(_ ctx: TypeExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterParenTypeExpr(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitParenTypeExpr(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitParenTypeExpr(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitParenTypeExpr(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class AliasingContext: TypeExprContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(LangParser.Tokens.Identifier.rawValue, 0)
			}

		public
		init(_ ctx: TypeExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterAliasing(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitAliasing(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitAliasing(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitAliasing(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ProductTypeContext: TypeExprContext {
			open
			func typeExpr() -> [TypeExprContext] {
				return getRuleContexts(TypeExprContext.self)
			}
			open
			func typeExpr(_ i: Int) -> TypeExprContext? {
				return getRuleContext(TypeExprContext.self, i)
			}

		public
		init(_ ctx: TypeExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterProductType(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitProductType(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitProductType(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitProductType(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class SumTypeContext: TypeExprContext {
		public var lhs: TypeExprContext!
		public var rhs: TypeExprContext!
			open
			func typeExpr() -> [TypeExprContext] {
				return getRuleContexts(TypeExprContext.self)
			}
			open
			func typeExpr(_ i: Int) -> TypeExprContext? {
				return getRuleContext(TypeExprContext.self, i)
			}

		public
		init(_ ctx: TypeExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterSumType(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitSumType(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitSumType(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitSumType(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class FuncTypeContext: TypeExprContext {
		public var arg: TypeExprContext!
		public var ret: TypeExprContext!
			open
			func typeExpr() -> [TypeExprContext] {
				return getRuleContexts(TypeExprContext.self)
			}
			open
			func typeExpr(_ i: Int) -> TypeExprContext? {
				return getRuleContext(TypeExprContext.self, i)
			}

		public
		init(_ ctx: TypeExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterFuncType(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitFuncType(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitFuncType(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitFuncType(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}

	 public final  func typeExpr( ) throws -> TypeExprContext   {
		return try typeExpr(0)
	}
	@discardableResult
	private func typeExpr(_ _p: Int) throws -> TypeExprContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: TypeExprContext
		_localctx = TypeExprContext(_ctx, _parentState)
		var _prevctx: TypeExprContext = _localctx
		let _startState: Int = 4
		try enterRecursionRule(_localctx, 4, LangParser.RULE_typeExpr, _p)
		var _la: Int = 0
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			setState(52)
			try _errHandler.sync(self)
			switch(try getInterpreter().adaptivePredict(_input,4, _ctx)) {
			case 1:
				_localctx = AliasingContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx

				setState(35)
				try match(LangParser.Tokens.Identifier.rawValue)

				break
			case 2:
				_localctx = ParenTypeExprContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(36)
				try match(LangParser.Tokens.T__2.rawValue)
				setState(37)
				try typeExpr(0)
				setState(38)
				try match(LangParser.Tokens.T__3.rawValue)

				break
			case 3:
				_localctx = ProductTypeContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(40)
				try match(LangParser.Tokens.T__2.rawValue)
				setState(49)
				try _errHandler.sync(self)
				_la = try _input.LA(1)
				if (_la == LangParser.Tokens.T__2.rawValue || _la == LangParser.Tokens.Identifier.rawValue) {
					setState(41)
					try typeExpr(0)
					setState(46)
					try _errHandler.sync(self)
					_la = try _input.LA(1)
					while (_la == LangParser.Tokens.T__4.rawValue) {
						setState(42)
						try match(LangParser.Tokens.T__4.rawValue)
						setState(43)
						try typeExpr(0)


						setState(48)
						try _errHandler.sync(self)
						_la = try _input.LA(1)
					}

				}

				setState(51)
				try match(LangParser.Tokens.T__3.rawValue)

				break
			default: break
			}
			_ctx!.stop = try _input.LT(-1)
			setState(62)
			try _errHandler.sync(self)
			_alt = try getInterpreter().adaptivePredict(_input,6,_ctx)
			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
				if ( _alt==1 ) {
					if _parseListeners != nil {
					   try triggerExitRuleEvent()
					}
					_prevctx = _localctx
					setState(60)
					try _errHandler.sync(self)
					switch(try getInterpreter().adaptivePredict(_input,5, _ctx)) {
					case 1:
						_localctx = SumTypeContext(  TypeExprContext(_parentctx, _parentState))
						(_localctx as! SumTypeContext).lhs = _prevctx
						try pushNewRecursionContext(_localctx, _startState, LangParser.RULE_typeExpr)
						setState(54)
						if (!(precpred(_ctx, 2))) {
						    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 2)"))
						}
						setState(55)
						try match(LangParser.Tokens.T__5.rawValue)
						setState(56)
						try {
								let assignmentValue = try typeExpr(3)
								_localctx.castdown(SumTypeContext.self).rhs = assignmentValue
						     }()


						break
					case 2:
						_localctx = FuncTypeContext(  TypeExprContext(_parentctx, _parentState))
						(_localctx as! FuncTypeContext).arg = _prevctx
						try pushNewRecursionContext(_localctx, _startState, LangParser.RULE_typeExpr)
						setState(57)
						if (!(precpred(_ctx, 1))) {
						    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 1)"))
						}
						setState(58)
						try match(LangParser.Tokens.T__6.rawValue)
						setState(59)
						try {
								let assignmentValue = try typeExpr(1)
								_localctx.castdown(FuncTypeContext.self).ret = assignmentValue
						     }()


						break
					default: break
					}
			 
				}
				setState(64)
				try _errHandler.sync(self)
				_alt = try getInterpreter().adaptivePredict(_input,6,_ctx)
			}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx;
	}

	public class TypeHintContext: ParserRuleContext {
			open
			func typeExpr() -> TypeExprContext? {
				return getRuleContext(TypeExprContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_typeHint
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterTypeHint(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitTypeHint(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitTypeHint(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitTypeHint(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func typeHint() throws -> TypeHintContext {
		var _localctx: TypeHintContext
		_localctx = TypeHintContext(_ctx, getState())
		try enterRule(_localctx, 6, LangParser.RULE_typeHint)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(65)
		 	try match(LangParser.Tokens.T__7.rawValue)
		 	setState(66)
		 	try typeExpr(0)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class BindingContext: ParserRuleContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(LangParser.Tokens.Identifier.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func typeHint() -> TypeHintContext? {
				return getRuleContext(TypeHintContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_binding
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterBinding(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitBinding(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitBinding(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitBinding(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func binding() throws -> BindingContext {
		var _localctx: BindingContext
		_localctx = BindingContext(_ctx, getState())
		try enterRule(_localctx, 8, LangParser.RULE_binding)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(68)
		 	try match(LangParser.Tokens.Identifier.rawValue)
		 	setState(70)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == LangParser.Tokens.T__7.rawValue) {
		 		setState(69)
		 		try typeHint()

		 	}

		 	setState(72)
		 	try match(LangParser.Tokens.T__1.rawValue)
		 	setState(73)
		 	try expr(0)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class BindingListContext: ParserRuleContext {
			open
			func binding() -> [BindingContext] {
				return getRuleContexts(BindingContext.self)
			}
			open
			func binding(_ i: Int) -> BindingContext? {
				return getRuleContext(BindingContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_bindingList
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterBindingList(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitBindingList(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitBindingList(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitBindingList(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func bindingList() throws -> BindingListContext {
		var _localctx: BindingListContext
		_localctx = BindingListContext(_ctx, getState())
		try enterRule(_localctx, 10, LangParser.RULE_bindingList)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(75)
		 	try binding()
		 	setState(80)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == LangParser.Tokens.T__4.rawValue) {
		 		setState(76)
		 		try match(LangParser.Tokens.T__4.rawValue)
		 		setState(77)
		 		try binding()


		 		setState(82)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FuncParamContext: ParserRuleContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(LangParser.Tokens.Identifier.rawValue, 0)
			}
			open
			func typeHint() -> TypeHintContext? {
				return getRuleContext(TypeHintContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_funcParam
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterFuncParam(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitFuncParam(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitFuncParam(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitFuncParam(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func funcParam() throws -> FuncParamContext {
		var _localctx: FuncParamContext
		_localctx = FuncParamContext(_ctx, getState())
		try enterRule(_localctx, 12, LangParser.RULE_funcParam)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(83)
		 	try match(LangParser.Tokens.Identifier.rawValue)
		 	setState(85)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == LangParser.Tokens.T__7.rawValue) {
		 		setState(84)
		 		try typeHint()

		 	}


		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FuncParamListContext: ParserRuleContext {
			open
			func funcParam() -> [FuncParamContext] {
				return getRuleContexts(FuncParamContext.self)
			}
			open
			func funcParam(_ i: Int) -> FuncParamContext? {
				return getRuleContext(FuncParamContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_funcParamList
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterFuncParamList(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitFuncParamList(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitFuncParamList(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitFuncParamList(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func funcParamList() throws -> FuncParamListContext {
		var _localctx: FuncParamListContext
		_localctx = FuncParamListContext(_ctx, getState())
		try enterRule(_localctx, 14, LangParser.RULE_funcParamList)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(90)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == LangParser.Tokens.Identifier.rawValue) {
		 		setState(87)
		 		try funcParam()


		 		setState(92)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class ExprContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return LangParser.RULE_expr
		}
	}
	public class ConditionalExpressionContext: ExprContext {
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterConditionalExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitConditionalExpression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitConditionalExpression(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitConditionalExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class AssignmentExpressionContext: ExprContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(LangParser.Tokens.Identifier.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func typeHint() -> TypeHintContext? {
				return getRuleContext(TypeHintContext.self, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterAssignmentExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitAssignmentExpression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitAssignmentExpression(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitAssignmentExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ParenExpressionContext: ExprContext {
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterParenExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitParenExpression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitParenExpression(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitParenExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class FuncAppExpressionContext: ExprContext {
		public var function: ExprContext!
		public var arg: ExprContext!
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterFuncAppExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitFuncAppExpression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitFuncAppExpression(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitFuncAppExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class MemberExpressionContext: ExprContext {
		public var object: ExprContext!
		public var index: Token!
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func IntegerLiteral() -> TerminalNode? {
				return getToken(LangParser.Tokens.IntegerLiteral.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.enterMemberExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LangListener {
				listener.exitMemberExpression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LangVisitor {
			    return visitor.visitMemberExpression(self)
			}
			else if let visitor = visitor as? LangBaseVisitor {
			    return visitor.visitMemberExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class VariableExpressionContext: ExprContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(LangParser.Tokens.Identifier.rawValue, 0)
			}
